# seestar

./: .gitignore  CONTRIBUTING.md  HACKING.md  IMAGE_EXTRACTION.md  MEMENTO.md  README.md  SEESTAR_WIFI_WEDGE_FIX.md  UPGRADE_PROBLEM_SUMMARY.md  UPGRADE_PROCEDURE_VERIFIED.md
analysis/: download_apks.py  pyproject.toml  run_full_analysis.sh
analysis/driver_diff/: jul2023_all_strings.txt  jul2023_strings.txt  jul2023_symbols.txt  oct2025_all_strings.txt
analysis/output/: apk_changelog.md  compare_fw_v1.18.0_vs_v1.19.0.md  compare_fw_v1.19.0_vs_v1.20.0.md  compare_fw_v1.20.0_vs_v1.20.2.md  compare_fw_v1.20.2_vs_v2.0.0.md  compare_fw_v2.0.0_vs_v2.1.0.md  compare_fw_v2.1.0_vs_v2.2.0.md  compare_fw_v2.2.0_vs_v2.2.1.md  compare_fw_v2.2.1_vs_v2.3.0.md  compare_fw_v2.3.0_vs_v2.3.1.md  compare_fw_v2.3.1_vs_v2.4.0.md  compare_fw_v2.4.0_vs_v2.4.1.md  compare_fw_v2.4.1_vs_v2.5.0.md  compare_fw_v2.5.0_vs_v2.6.0.md  compare_fw_v2.6.0_vs_v2.6.1.md  compare_fw_v2.6.1_vs_v2.6.4.md  compare_fw_v2.6.4_vs_v2.7.0.md  compare_fw_v2.7.0_vs_v3.0.0.md  compare_fw_v3.0.0_vs_v3.0.1.md  compare_fw_v3.0.1_vs_v3.0.2.md  compare_fw_v3.0.2_vs_v3.1.0.md  compare_fw_v3.1.0_vs_v3.1.1.md  compare_fw_v3.1.1_vs_v3.1.2.md  compare_v1.18.0_vs_v1.19.0.md  compare_v1.19.0_vs_v1.20.0.md  compare_v1.20.0_vs_v1.20.2.md  compare_v1.20.2_vs_v2.0.0.md  compare_v2.0.0_vs_v2.1.0.md  compare_v2.1.0_vs_v2.2.0.md  compare_v2.2.0_vs_v2.2.1.md  compare_v2.2.0_vs_v2.3.0.md  compare_v2.2.1_vs_v2.3.0.md  compare_v2.3.0_vs_v2.3.1.md  compare_v2.3.1_vs_v2.4.0.md  (+19 more)
seestar-api/: MOVED.md  README.md  pyproject.toml
(+51 files in other folders)
