[project]
name = "seestar-analysis"
version = "0.1.0"
description = "Seestar S50 APK version analysis and comparison toolbox"
readme = "README.md"
authors = [
    { name = "Ivan R. Judson", email = "irjudson@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "androguard>=4.1.3",
    "click>=8.3.2",
    "jinja2>=3.1.6",
    "rich>=15.0.0",
]

[project.scripts]
seestar-analysis = "seestar_analysis.cli:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
