[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seestar"
version = "0.1.0"
description = "Python client library for ZWO Seestar smart telescopes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "cryptography>=41.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
